<resources>
    <string name="app_name" translatable="false">Wash4Me</string>
    <string name="facebook_app_id" translatable="false">1166468846743300</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1166468846743300</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_my_orders">My Orders</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Drawer Strings -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <!-- Drawer Strings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nav_item_new_order">NEW ORDER</string>
    <string name="nav_item_my_orders">MY ORDERS</string>
    <string name="nav_item_suppliers">SUPPLIERS</string>
    <string name="nav_item_exit">EXIT</string>
    <string name="nav_item_settings">SETTINGS</string>
    <string name="nav_item_chat">CHAT</string>
    <string name="action_settings">Settings</string>

    <string name="example_name" translatable="false">Theodore E. Mosby</string>
    <string name="example_email" translatable="false">theodore@himym.co</string>

    <string-array name="park_array">
        <item>VAGA NA RUA</item>
        <item>ESTACIONAMENTO COBERTO</item>
        <item>ESTACIONAMENTO DESCOBERTO</item>
        <item>MINHA GARAGEM</item>
        <item>GARAGEM DE OUTRA PESSOA</item>
    </string-array>

    <string-array name="color_array">
        <item>BRANCO</item>
        <item>PRETO</item>
        <item>AZUL</item>
        <item>AMARELO</item>
        <item>VERMELHO</item>
        <item>PRATA</item>
        <item>VERDE</item>
        <item>ROSA</item>
        <item>LARANJA</item>
        <item>ROXO</item>
    </string-array>
</resources>
