<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/navigation_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_suppliers"
            android:icon="@drawable/ic_assignment_ind_black_18dp"
            android:title="@string/nav_item_suppliers" />
        <item
            android:id="@+id/navigation_item_chat"
            android:icon="@drawable/ic_chat_black_18dp"
            android:title="@string/nav_item_chat" />
    </group>
    <group
        android:id="@+id/navigation_group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_item_exit"
            android:icon="@drawable/ic_power_settings_new_black_18dp"
            android:title="@string/nav_item_exit" />
    </group>

</menu>