<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/w4mPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    tools:context="br.eco.wash4me.activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="eduardo@dv-w4m.com.br"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="admin"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/W4MTheme.Button.Accent"
                android:layout_marginTop="12dp"
                android:text="@string/action_sign_in" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginTop="12dp"
                android:textAllCaps="true"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/w4mAccent"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:padding="12dp"
                android:text="ESQUECI A SENHA" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/login_user_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:clipToPadding="false"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_visitor"
                style="@style/W4MTheme.Button.Primary"
                android:text="VEJA OS SERVIÇOS" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:background="#CCCCCC" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="#FFFFFF"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:text="OU"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_member"
                style="@style/W4MTheme.Button.Accent"
                android:text="FAÇA SEU LOGIN" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
